// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`arktype > basic 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype > morph schema in json body without explicit fallback 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "post": {
        "operationId": "postIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "id": {
                    "pattern": "^(?:(?!^-0$)-?(?:(?:0|[1-9]\\d*)))$",
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype > morph schema in param without explicit fallback 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "getUsersById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "pattern": "^(?:(?!^-0\\.?0*$)(?:-?(?:(?:0|[1-9]\\d*)(?:\\.\\d+)?)|\\.\\d+?))$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype > with metadata 1`] = `
{
  "components": {
    "schemas": {
      "SuccessResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
        },
        "required": [
          "message",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SuccessResponse",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype > with options 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "id": {
                    "pattern": "^(?:(?!^-0$)-?(?:(?:0|[1-9]\\d*)))$",
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype basic 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype morph schema in json body without explicit fallback 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "post": {
        "operationId": "postIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "id": {
                    "pattern": "^(?:(?!^-0$)-?(?:(?:0|[1-9]\\d*)))$",
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype morph schema in param without explicit fallback 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/users/{id}": {
      "get": {
        "operationId": "getUsersById",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "pattern": "^(?:(?!^-0\\.?0*$)(?:-?(?:(?:0|[1-9]\\d*)(?:\\.\\d+)?)|\\.\\d+?))$",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype with metadata 1`] = `
{
  "components": {
    "schemas": {
      "SuccessResponse": {
        "properties": {
          "message": {
            "type": "string",
          },
        },
        "required": [
          "message",
        ],
        "type": "object",
      },
    },
  },
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "This is a test route",
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "message": {
                    "type": "string",
                  },
                },
                "required": [
                  "message",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SuccessResponse",
                },
              },
            },
            "description": "Success",
          },
        },
        "summary": "Test route",
        "tags": [
          "test",
        ],
      },
    },
  },
  "tags": undefined,
}
`;

exports[`arktype with options 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "operationId": "getIndex",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "id": {
                    "pattern": "^(?:(?!^-0$)-?(?:(?:0|[1-9]\\d*)))$",
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {},
        },
      },
    },
  },
  "tags": undefined,
}
`;
